--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -388,8 +388,6 @@ body.dark-theme {
   font-weight: 400;
   color: var(--text-color-light);
   margin-bottom: 1rem;
-  
-
 }
 
 .home__info-description,
@@ -618,6 +616,7 @@ body.dark-theme {
   justify-content: center;
 }
 
+
 .projects__img{
   width: 250px;
   border-radius: .75rem;
@@ -765,12 +764,75 @@ body.dark-theme {
   opacity: 0;
 }
 /*=============== TESTIMONIAL ===============*/
+.testimonial{
+  position: relative;
+}
 
+.testimonial__content{
+  text-align: center;
+}
+
+.testimonial__description{
+  font-family: var(--title-font);
+  color: var(--title-color);
+  margin-bottom: 1.5rem;
+}
+
+.testimonial__name{
+  font-family: var(--body-font);
+  font-size: var(--small-font-size);
+  margin-bottom: .25rem;
+}
+
+.testimonial__subtitle{
+  font-size: var(--smaller-font-size);
+  color: var(--text-color-light);
+}
+
+.testimonial__img{
+  width: 70px;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 5rem;
+  right: -1.5rem;
+  opacity: .1;
+}
 
 /* Swiper class */
+.testimonial__container .swiper-slide{
+  margin-bottom: 4rem;
+}
 
+.testimonial__container .swiper-button-prev::after,
+.testimonial__container .swiper-button-next::after{
+  content: '';
+}
+
+.testimonial__container .swiper-button-prev,
+.testimonial__container .swiper-button-next{
+  font-size: 2rem;
+  color: var(--title-color);
+  width: initial;
+  height: initial;
+  top: initial;
+  bottom: .5rem;
+}
+
+.testimonial__container .swiper-button-prev{
+  left: calc(50% - 3rem);
+}
+
+.testimonial__container .swiper-button-next{
+  right: calc(50% - 3rem);
+}
+
+.testimonial__container .swiper-button-disabled{
+  opacity: initial;
+  color: var(--text-color-light);
+}
 
 /*=============== CONTACT ===============*/
+
 .contact__container{
   row-gap: 3.5rem;
 }
@@ -1328,7 +1390,4 @@ body.dark-theme {
  .footer__copy{
   margin-top: 5rem;
  }
-
- 
- 
 }
