--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -573,7 +573,7 @@ body.dark-theme {
 .volunteer__card img{
   height: 5rem;
 }
-.shaukat_logo, .futurefest_logo, .kaavish_logo{
+.shaukat_logo, .futurefest_logo, .kaavish_logo, .vlg_logo{
   border-radius: 50%;
 }
 
